syntax = "proto3";

package api;

option optimize_for = LITE_RUNTIME;

import "struct_lite.proto";

service EnforcerWebSocketService {
  rpc PublishFrameData(stream WebSocketFrameRequest) returns (stream WebSocketFrameResponse) {}    
}

message WebSocketFrameRequest {
  string name = 1;
  google.protobuf.Struct ext_metadata = 2;
}

message WebSocketFrameResponse {
  string message = 1;
}

// this proto represents configuration for the example filter
// message Config {
//   string clustername = 1;
// }